test/should-pass/pass/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass object
{
  method foobar(object-t self) -> object-t {
    return self;
  }
}

int-t main() {
  object-t o = make(string::klass);
  $foobar(o);
  return 0;
}
