test/should-fail/illegal-predicate-method-defn/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass o1
{
  method empty?(object-t self) -> object-t {
    return self;
  }
}

int-t main() {
  return 0;
}
